# web3_algorand

./: .algokit.toml  .gitignore  Dockerfile  README.md  pyproject.toml
.algokit/: .copier-answers.yml
frontend/: Dockerfile  app.py  docker-compose.yml  requirements.txt
frontend/static/: style.css
frontend/templates/: approve.html  base.html  certify.html  create.html  index.html  vendor.html
smart_contracts/artifacts/compliance_engine/: ComplianceEngine.approval.puya.map  ComplianceEngine.approval.teal  ComplianceEngine.arc56.json  compliance_engine_client.py
smart_contracts/compliance_engine/: contract.py  deploy_config.py
